Link maps and map packs to gametypes